upgrade packages and some fixes

--- a/public/index.html
+++ b/public/index.html
@@ -26,34 +26,20 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <span class="navbar-text ml-auto mr-3 mt-2">
           <!-- Place this tag where you want the button to render. -->
-          <a class="github-button" href="https://github.com/amritb/socketio-client-tool/issues"
+          <a class="github-button" href="https://github.com/mnm89/socket.io-client-testing-tool/issues"
             data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-icon="octicon-issue-opened"
-            aria-label="Issue amritb/socketio-client-tool on GitHub">Issue</a>
-          <a class="github-button" href="https://github.com/amritb/socketio-client-tool"
+            aria-label="Issue mnm89/socket.io-client-testing-toolon GitHub">Issue</a>
+          <a class="github-button" href="https://github.com/mnm89/socket.io-client-testing-tool"
             data-color-scheme="no-preference: dark; light: light; dark: dark;" data-show-count="true"
-            aria-label="Star amritb/socketio-client-tool on GitHub">Star</a>
+            aria-label="Star mnm89/socket.io-client-testing-tool on GitHub">Star</a>
         </span>
       </div>
     </div>
   </nav>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-
-  <div class="container my-5 pt-3">
-    <div class="row">
-      <div class="col">
-        <hr />
-        <div class="text-center small text-muted">
-          <a href="v1/">use previous version (socket.io 2.x and below)</a><br />
-          <a href="https://amritbera.com">amritbera.com</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <!-- Place this tag in your head or just before your close body tag. -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
-
 </body>
 
 </html>
